--- a/css/style.css
+++ b/css/style.css
@@ -362,6 +362,11 @@ template {
   font-weight: bold;
 }
 
+.button:hover {
+  background-color: #e5ddd5;
+  border: 1px solid #6a4d38;
+}
+
 .header-menu {
   background-color: #000;
 }
@@ -389,6 +394,19 @@ template {
 
 .header-wrapper__item {
   list-style-type: none;
+  color: #fff;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header-wrapper__item:hover {
+  border-bottom: 3px solid #826550;
+  border-top: 3px solid transparent;
 }
 
 .header-wrapper__item--login {
@@ -406,14 +424,14 @@ template {
   font-weight: bold;
   font-size: 18px;
   line-height: 24px;
-  color: #fff;
+  color: inherit;
 }
 
 .header-wrapper__button {
   background-color: transparent;
   border: none;
   cursor: pointer;
-  color: #fff;
+  color: inherit;
   text-decoration: none;
   text-transform: uppercase;
   font-style: normal;
@@ -613,6 +631,10 @@ template {
   padding-left: 25px;
 }
 
+.login__input:hover {
+  border: 1px solid #353535;
+}
+
 .login__username {
   margin-bottom: 6px;
 }
@@ -637,6 +659,7 @@ template {
 .login__remember {
   height: 33px;
   width: 33px;
+  cursor: pointer;
 }
 
 .login__remember-wrapper {
@@ -655,6 +678,7 @@ template {
   font-weight: normal;
   font-size: 18px;
   line-height: 23px;
+  cursor: pointer;
 }
 
 .login__forget {
@@ -680,10 +704,20 @@ template {
   line-height: 23px;
   text-transform: uppercase;
   border: none;
+  cursor: pointer;
+}
+
+.login__button:hover {
+  background-color: #6a4d38;
 }
 
 .login__button--close-mob {
   display: none;
+}
+
+.login__button--close-mob:hover {
+  background-color: #e5ddd5;
+  border: 1px solid #6a4d38;
 }
 
 @-webkit-keyframes appear {
@@ -944,6 +978,11 @@ template {
           transform: none;
   background-color: #f8f5f2;
   border: 1px solid #E5DDD5;
+}
+
+.reviews-slider__button:hover {
+  background-color: #e5ddd5;
+  border: 1px solid #6a4d38;
 }
 
 .reviews-slider__button--prev {
@@ -1348,6 +1387,9 @@ template {
     z-index: 100;
     top: 85px;
   }
+  .header-menu-mob__button:hover {
+    border: 3px solid #fff;
+  }
   .header-menu-mob__wrapper {
     width: 100%;
     height: 18px;
@@ -1454,6 +1496,10 @@ template {
         -ms-flex-align: center;
             align-items: center;
     padding-left: 21px;
+  }
+  .header-wrapper__item:hover {
+    border: none;
+    background-color: #6a4d38;
   }
   .header-wrapper__login-text {
     display: inline-block;
