--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -12,3 +12,6 @@
     border: 1px solid #e5ddd5
     text-transform: uppercase
     font-weight: bold
+    &:hover
+        background-color: #e5ddd5
+        border: 1px solid #6a4d38
