--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -46,6 +46,9 @@
             transform: none
             background-color: #f8f5f2
             border: 1px solid #E5DDD5
+            &:hover
+                background-color: #e5ddd5
+                border: 1px solid #6a4d38
             &--prev
                 left: 0
                 &::after
