--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -13,6 +13,13 @@
         margin: 0
         &__item
             list-style-type: none
+            color: #fff
+            height: 100%
+            display: flex
+            align-items: center
+            &:hover
+                border-bottom: 3px solid #826550
+                border-top: 3px solid transparent
             &--login
                 margin-left: 140px
         &__login-icon
@@ -24,12 +31,12 @@
             font-weight: bold
             font-size: 18px
             line-height: 24px
-            color: #fff
+            color: inherit
         &__button
             background-color: transparent
             border: none
             cursor: pointer
-            color: #fff
+            color: inherit
             text-decoration: none
             text-transform: uppercase
             font-style: normal
