--- a/sass/blocks/_media.sass
+++ b/sass/blocks/_media.sass
@@ -181,6 +181,8 @@
                     position: absolute
                     z-index: 100
                     top: 85px
+                    &:hover
+                        border: 3px solid #fff
                 &__wrapper
                     width: 100%
                     height: 18px
@@ -256,6 +258,9 @@
                 display: flex
                 align-items: center
                 padding-left: 21px
+                &:hover
+                    border: none
+                    background-color: #6a4d38
             &__login
                 &-text
                     display: inline-block
